--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>This is my frist website</h1>
     <h2>hello, i am shakil</h2>
     <h4>I am a crickter</h4>
+    <img src="mew.jpg" alt="">
 </body>
 </html>
