--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h2>hello, i am shakil</h2>
     <h4>I am a crickter</h4>
     <h3>this line is to be a second branch</h3>
+    <p>adding to second branch</p>
     <img src="mew.jpg" alt="">
 </body>
 </html>
